[gd_scene load_steps=2 format=2]

[ext_resource path="res://tools.gd" type="Script" id=1]

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="Center" type="CenterContainer" parent="."]
anchor_left = 0.00195313
anchor_top = -0.00166667
anchor_right = 1.00195
anchor_bottom = 0.998333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBox" type="VBoxContainer" parent="Center"]
margin_left = 282.0
margin_top = 269.0
margin_right = 740.0
margin_bottom = 329.0

[node name="HBox" type="HBoxContainer" parent="Center/VBox"]
margin_right = 458.0
margin_bottom = 60.0

[node name="game_graph" type="Button" parent="Center/VBox/HBox"]
margin_right = 150.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 60 )
text = "Game Graph"

[node name="production_vewer" type="Button" parent="Center/VBox/HBox"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 60 )
text = "Production viever"

[node name="production_converter" type="Button" parent="Center/VBox/HBox"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 60 )
text = "Production converter"
[connection signal="pressed" from="Center/VBox/HBox/game_graph" to="." method="_on_game_graph_pressed"]
[connection signal="pressed" from="Center/VBox/HBox/production_vewer" to="." method="_on_production_vewer_pressed"]
[connection signal="pressed" from="Center/VBox/HBox/production_converter" to="." method="_on_production_converter_pressed"]
